2007-12-05    <jeff@mini.nerble.net>

	* mapedit/eggedit.cc, mapedit/exult_studio.glade: Support z-coord
	in intermap teleport eggs.

2007-11-07  Ryan Nunn <colourles@users.sourceforge.net>
	* exult.cc, gamewin.*, gumps/GameplayOptions_gump.cc : Made lerping a 
	  percentage value. Default now to 75% that makes things not quite as 
	  smooth as they were before and seems to be a reasonable tradeoff. 
	  GameplayObjects now has options for disabled, 25%, 50%, 75% and 100%
    * actors.cc : Fixing avatar combat problems, but this really needs a 
      proper solution to my double step problem. The code i've written seems to
      have a few unintended consequences causing extra long pauses when moving
	
2007-11-06  Ryan Nunn <colourles@users.sourceforge.net>
	* effects.cc, exult.cc, gamerend.cc, gamewin.cc, gamewin.h : Two words:
	  "Smooth Scrolling". Some more words: It's a bit of a hack but it works
	  really well. The screen position is interpolated based on the camera 
	  actor's animation rate or get_std_delay() if it's not set. The camera 
	  actor's position is also interpolated (though in a really hacky manner)
	  so the avatar's movement isn't jerky. All other objects do NOT have their
	  movement interpolated, but just smooth avatar movement is a HUGE 
	  improvement. Added config key "config/gameplay/smooth_scrolling"
	  to control this. This is enabled by default for now. Code diffs should 
	  highlight how things have changed.
	* actors.cc : Added a slight hack to Main_actor::handle_event to stop
	  some 'double stepping' that was looking really bad with smooth 
	  scrolling. See the comment in the code for details
	* gumps/GameplayOptions_gump.* : Added toggle for smooth scrolling.

2007-11-04    <jeff@mini.nerble.net>

	* server/server.cc: Support 'locate' with 'quality' in ES.

	* exult.cc: Show FPS.  Also, made an experimental change to the
	event'loop's rendering condition.

2007-10-31	Marzo Sette Torres Junior <marzojr@yahoo.com>